--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "mysql2": "^3.5.0",
     "nodemon": "^2.0.22",
     "sequelize": "^6.32.1"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.1"
   }
 }
