--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Jeyfferson",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.5.0",
     "nodemon": "^2.0.22",
